Added brave-cactus reference

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
     <section id="main">
       <header id="header">
         <h1>Mathieu Civel</h1>
-        <h2>Full-stack Web Developer</h2>
+        <h2 class="st1">Frontend web developer</h2>
+        <h2 class="st2">
+          <a href="http://brave-cactus.fr" target="_blank">Brave Cactus member</a>
+        </h2>
         <div id="header-links">
           <a class="round-link" href="mailto:mathieu@civel.eu" title="Contact">
             <span class="mc-envelop"></span>
